[package]
name = "metrotime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.49.0"
aws-sdk-s3 = "0.19.0"
lambda_runtime = "0.6.1"
html_parser = "0.7.0"
serde = "1.0.136"
serde_json = "1.0.85"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
#headless_chrome = {version = "1.0.5", features = ["fetch"]}
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono"  ] }
futures = "0.3.28"
chrono = "0.4.31"
strum = "0.25.0"
strum_macros = "0.25.3"
