[package]
name = "metrotime-cron"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws_lambda_events = { version = "0.10.0", default-features = false, features = ["cloudwatch_events"] }

lambda_runtime = "0.8.1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

aws-config = "0.49.0"
aws-sdk-s3 = "0.19.0"
html_parser = "0.7.0"
serde = "1.0.136"
serde_json = "1.0.85"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
#diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono"  ] }
futures = "0.3.28"
chrono = "0.4.31"
strum = "0.25.0"
strum_macros = "0.25.3"
